# ML_framework_labb

./: .gitignore  README.md  check_env.py  download_cifar.py  eda.ipynb  pyproject.toml
.dvc/: config
notebooks/: eda.ipynb
src/: dataset.py  main.py  model.py  train.py
